# wbkit

./: .gitignore  Makefile  README.md  __init__.py  basic.py  calculator.py  fuel.py  inputclasses.py  pyproject.toml  setup.cfg  setup.py  stab.py  wb_calculator.py
crjwb/: __init__.py  basic.py  cabinareatrim.py  calculator.py  exceptions.py  inputclasses.py  stab.py
src/crjwb/: __init__.py  basic.py  exceptions.py  fuel.py  inputclasses.py  interpolables.py  stab.py
src/tests/: conftest.py  test_basic.py  test_calculator.py  test_cglimits.py  test_config.py  test_fuel.py  test_index.py  test_index_constants.py  test_influence.py  test_interpolable.py  test_interpolables.py  test_percentmac.py  test_plfunc.py  test_stab.py
src/wbkit/: __init__.py  basic.py  cglimits.py  config.py  geometry.py  interpolable.py  interpolables.py  plfunc.py
tests/: test_basic.py  test_cabinareatrim.py  test_calculator.py  test_cglimits.py  test_plfunc.py  test_stab.py
tests/cglimits/: conftest.py  test_cg.py  test_cglimits.py
