[metadata]
name = crjwb
version = 0.0.1
author = Semen Filippov
author_email = semenfilippov@gmail.com
description = CRJ100/200 weight and balance calculation tool
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
license_file = LICENSE
url = https://github.com/semenfilippov/crjwb
project_urls =
    Bug Tracker = https://github.com/semenfilippov/crjwb/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests